--- a/resources/css/pages/_services.scss
+++ b/resources/css/pages/_services.scss
@@ -512,9 +512,11 @@
 			overflow: hidden;
 			width: 30%;
 			height: auto;
+			position: relative;
 			img {
 				object-fit: cover;
 				height: 100%;
+				position: absolute;
 			}
 		}
 		&__txt-container {
